fix(permission): null-safe PolicyContext list setters and add column policy tests
- Add @NonNull to rowPolicies/columnPolicies in PolicyContext so Lombok generates null-checking setters
- Replace .collect(Collectors.toList()) with .toList() in InMemoryPolicyResolver (Java 21)
- Add 3 tests for resolveColumnPolicies: empty, matching user, and modelId filtering

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>